# sdl-game-programming-mitchell

./: .gitignore  README.md  sdl-game-programming-mitchell.sln
assets/: blocks3.tsx  map1.tmx  objecttypes.xml  tileset1.tsx  tileset2.tsx
chapter2/: CMakeLists.txt  Game.cpp  Game.h  README.md  TextureManager.cpp  TextureManager.h
chapter3/: CMakeLists.txt  Enemy.cpp  Enemy.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  Player.cpp  Player.h  SDLGameObject.cpp  SDLGameObject.h  main.cpp
chapter4/: CMakeLists.txt  Game.cpp  Game.h  InputHandler.cpp  InputHandler.h  LoaderParams.h  Player.cpp  Player.h  SDLGameObject.h  TextureManager.h  main.cpp
chapter5/: .SDLGameObject.h.swp  AnimatedGraphic.cpp  AnimatedGraphic.h  CMakeLists.txt  Enemy.cpp  Game.cpp  Game.h  GameOverState.cpp  GameState.h  GameStateMachine.cpp  InputHandler.cpp  InputHandler.h  MenuButton.cpp  MenuButton.h  MenuState.cpp  MenuState.h  PauseState.cpp  PlayState.cpp  PlayState.h  Player.cpp  SDLGameObject.cpp  SDLGameObject.h  TextureManager.cpp  TextureManager.h
chapter6/: AnimatedGraphic.cpp  AnimatedGraphic.h  CMakeLists.txt  Enemy.cpp  Enemy.h  Game.cpp  Game.h  GameObject.h  GameOverState.cpp  GameOverState.h  GameState.h  GameStateMachine.h  MainMenuState.h  MenuButton.h  MenuState.h  PauseState.cpp  PauseState.h  PlayState.cpp  Player.cpp  SDLGameObject.cpp  SDLGameObject.h  StateParser.cpp  test.xml  tinyxml.h
chapter7/: AnimatedGraphic.h  CMakeLists.txt  Game.cpp  Game.h  GameOverState.cpp  Layer.h  Level.cpp  Level.h  LevelParser.cpp  LevelParser.h  LoaderParams.h  MainMenuState.cpp  PauseState.cpp  PlayState.cpp  PlayState.h  Player.h  README.md  StateParser.h  TextureManager.cpp  TileLayer.cpp  TileLayer.h  Vector2D.cpp  Vector2D.h  map1.tmx  tileset1.tsx
chapter8/: AnimatedGraphic.cpp  AnimatedGraphic.h  Bullet.h  BulletHandler.cpp  BulletHandler.h  CMakeLists.txt  Collision.h  CollisionManager.cpp  CollisionManager.h  Enemy.h  Eskeletor.h  Game.cpp  Game.h  GameObject.h  GameObjectFactory.h  GameOverState.cpp  GameOverState.h  GameState.h  GameStateMachine.cpp  Glider.h  InputHandler.cpp  InputHandler.h  Layer.h  Level.cpp  Level.h  Level1Boss.h  LevelParser.cpp  LevelParser.h  MainMenuState.cpp  MainMenuState.h  MenuButton.cpp  MenuButton.h  MenuState.h  ObjectLayer.cpp  ObjectLayer.h  (+28 more)
chapter9/: AnimatedGraphic.cpp  AnimatedGraphic.h  CMakeLists.txt  Camera.cpp  Camera.h  Collision.h  CollisionManager.cpp  CollisionManager.h  Enemy.h  Game.cpp  Game.h  GameObject.h  GameObjectFactory.h  GameOverState.cpp  GameOverState.h  GameState.h  GameStateMachine.cpp  GameStateMachine.h  InputHandler.cpp  InputHandler.h  Layer.h  Level.cpp  Level.h  LevelParser.cpp  LevelParser.h  LoaderParams.h  MainMenuState.cpp  MainMenuState.h  MenuButton.cpp  MenuButton.h  MenuState.h  ObjectLayer.cpp  ObjectLayer.h  PauseState.cpp  PauseState.h  PlatformerObject.cpp  PlatformerObject.h  PlayState.cpp  PlayState.h  Player.cpp  (+15 more)
chapter9/assets/: conan.xml  map1.tmx
chapter9/assets/assets/: objecttypes.xml
running_diag/: CMakeLists.txt  README.md  main.cpp  run.sh
(+10 files in other folders)
